# bunnyland-plugin-aquasim

./: README.md
.github/workflows/: ci.yml
server/: README.md  pyproject.toml
server/src/bunnyland_aquasim/: __init__.py  breath.py  components.py  currents.py  diving.py  edges.py  enrichment.py  gear.py  harvest.py  install.py  integration_3d.py  marinelife.py  plugin.py  prefabs.py  spatial.py  structures.py  submersion.py  swim.py  synergy.py
server/src/bunnyland_aquasim/assets/: ASSET-LICENSES.md  aquatic-plants.mtl  coral-cluster.mtl
server/tests/: test_breath.py  test_currents.py  test_diving.py  test_enrichment.py  test_integration_3d.py  test_plugin.py  test_submersion.py  test_swim.py  test_v2.py  test_v2_coverage.py
