[project]
name = "bunnyland-aquasim"
version = "0.2.0"
description = "Out-of-tree Bunnyland plugin: swimming, diving, and the underwater — water rooms, a breath meter, drowning, currents, hazards, deterministic dive loot, and a swim skill."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "bunnyland>=1.0.0rc2,<2",
    "pydantic>=2.0",
    "relics-ecs>=0.1.1,<0.2",
]

[project.optional-dependencies]
3d = ["bunnyland-3d>=0.3.0"]

[project.entry-points."bunnyland.plugins"]
"bunnyland.aquasim" = "bunnyland_aquasim.plugin:bunnyland_plugins"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland_aquasim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
